fix alignment of timer

--- a/src/app/containers/scoreboard/score/score.component.scss
+++ b/src/app/containers/scoreboard/score/score.component.scss
@@ -1,5 +1,5 @@
 @use '../../../../_variables' as vars;
-@use '../../../../_mixins' as mixins;
+// @use '../../../../_mixins' as mixins;
 
 .score-toolbar {
   float: left;
@@ -16,18 +16,19 @@
 }
 
 .scoreboard-score {
-  margin-left: 5px;
+  margin-left: -60px;
   margin-top: -10px;
 }
 
 mat-toolbar {
   background: vars.$white;
+  margin-left: -30px;
 }
 mat-toolbar:hover {
   background-color: vars.$white !important;
 }
 mat-toolbar .leader {
-  margin-left: -35px !important;
+  // margin-left: -35px !important;
 }
 button {
   outline: none;
