--- a/src/app/containers/scoreboard/scoreboard.component.scss
+++ b/src/app/containers/scoreboard/scoreboard.component.scss
@@ -4,7 +4,7 @@ mat-card {
   height: auto;
   padding: 0;
   margin-top: -40px !important;
-  margin-bottom: -25px !important;
+  margin-bottom: -10px !important;
   background: transparent !important;
   box-shadow: none !important;
   border: none !important;
@@ -16,23 +16,38 @@ mat-card-content {
 }
 
 .scoreboard {
-  display: flex;
+  display: grid;
+  grid-template-columns: 1fr auto 1fr;
   justify-content: space-between;
   align-items: center;
   width: 100%;
+  height: auto;
   // padding: 0 15px;
   margin: 0;
-  box-sizing: border-box;
+  margin-bottom: 1rem;
+  // box-sizing: border-box;
 
   .scoreboard__score {
     margin: 0;
+    height: 35px;
   }
 
   .scoreboard__timer {
     margin: 0;
   }
 
+  .scoreboard__score,
+  .scoreboard__timer {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
+
   .scoreboard__badge {
+    display: flex;
+    justify-content: center;
+    align-items: center;
     font-family: vars.$font-stack;
     font-size: 26px;
     font-weight: vars.$font-weight-max;
@@ -40,6 +55,16 @@ mat-card-content {
     color: vars.$dark-green;
     margin: 0 10px;
     line-height: 1.2;
+  }
+
+  .scoreboard__score * {
+    margin-top: 0 !important;
+    margin-bottom: 0 !important;
+  }
+
+  .scoreboard__timer * {
+    margin-top: 0 !important;
+    margin-bottom: 0 !important;
   }
 }
 
